data/all_generated_tests/raw_wast_tests/loop_StackCorruption_362.wast
;; 3. **Test Description:**    - Check loop with `br_if` that conditionally exits the loop.    - **Constraint Checked:** Stack values remain consistent even after conditional branching inside the loop.    - **Relation to Stack Corruption:** Ensure values on stack observed outside loop are not corrupted by branch condition logic.    ```wasm    (module      (func (export "test") (result i32)        (local i32)        i32.const 0        loop (result i32)          i32.const 1          local.set 0          (local.get 0)          i32.const 1          i32.add          i32.const 10          i32.eq          br_if 0        end        i32.const 42))    )    ```

(assert_invalid
  (module
    (func $test (result i32)
      (local i32)
      i32.const 0
      loop (result i32)
        i32.const 1
        local.set 0
        local.get 0
        i32.const 1
        i32.add
        i32.const 10
        i32.eq
        br_if 0
      end
      i32.const 42
    )
  )
  "type mismatch"
)